# michi-context

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
scripts/: install-launchd.sh  install.sh
src/michi_context/: capture.py  cli.py  inject.py  learn.py  prune.py  store.py
tasks/: todo.md
