[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "michi-context"
version = "0.1.0"
description = "Session memory for Claude Code — captures, learns, and injects context"
requires-python = ">=3.10"
license = "MIT"

[project.scripts]
michi-context = "michi_context.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
